# PHON

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  pages.yml
Design/tokens/: colors.json  layout.json  typography.json
Source/DSP/: DensityShaper.cpp  DensityShaper.h  Harmonizer.cpp  Harmonizer.h  PhMeter.cpp  PhMeter.h  PhProcessor.cpp  PhProcessor.h  SafePeakLimiter.cpp  SafePeakLimiter.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: PhDisplay.cpp  PhDisplay.h  PhKnob.cpp  PhKnob.h  PhMeter.cpp  PhMeter.h  PhSelect.cpp  PhSelect.h  PhToggle.cpp  PhToggle.h
Tests/: TestDensityShaper.cpp  TestHarmonizer.cpp  main.cpp
docs/: ARCHITECTURE.md  index.html
